create auth google

--- a/templates/pages/dayPicture.html.twig
+++ b/templates/pages/dayPicture.html.twig
@@ -2,6 +2,12 @@
 {% block body %}
 <h1>Nasa Picture</h1>
 <div class="container">
+    <div>
+        <div class="user">
+            <img src="{{avatar}}" alt="avatar" class="avatar">
+            <div>{{user}}</div>
+        </div>
+    </div>
     <div class="title">
         <h2>{{title}}</h2>
         <div>{{date}}</div>
